# stm32f407ve_black_blinky

./: .gitmodules  CMakeLists.txt  README.md  debug.gdb  openocd-stm32f4xx.cfg
app/: CMakeLists.txt
app/include/: stm32f4xx_it.h
app/src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
toolchain/: stm32f407.cmake
